--- a/data/v2rayse-free.yaml
+++ b/data/v2rayse-free.yaml
@@ -1,10 +1,11 @@
 ####################################
 # 创建者：v2rayse.com
-# 客户端：Clash
-# 创建时间：2024-06-21 18:32:32
+# 客户端：Clash.Meta
+# 创建时间：2024-07-06 07:45:59
 # 使用模版：V2RaySE 默认模版
-# 节点数量：11
+# 节点数量：50
 ####################################
+# !!当前配置文件请使用基于 Clash.Meta 内核程序
 mixed-port: 7890
 allow-lan: true
 log-level: info
@@ -85,116 +86,389 @@ dns:
       - 0.0.0.0/32
 
 proxies:
-  - {"name":"🇨🇦_CA_加拿大_1","type":"vmess","server":"23.227.38.5","port":2086,"cipher":"auto","uuid":"29eebb60-b27b-4a9d-bba5-947763d9205e","alterId":0,"tls":false,"network":"ws"}
-  - {"name":"🇺🇸_US_美国_1","type":"vmess","server":"104.16.149.244","port":2086,"cipher":"auto","uuid":"29eebb60-b27b-4a9d-bba5-947763d9205e","alterId":0,"tls":false,"network":"ws"}
-  - {"name":"🇺🇸_US_美国_2","type":"vmess","server":"104.16.148.244","port":2086,"cipher":"auto","uuid":"29eebb60-b27b-4a9d-bba5-947763d9205e","alterId":0,"tls":false,"servername":"ip002.dtku47.xyz","network":"ws"}
-  - {"name":"🇺🇸_US_美国_3","type":"vmess","server":"speed.cloudflare.com","port":80,"cipher":"auto","uuid":"76221bfb-e92f-4e80-81c5-6fe48f50ac0b","alterId":0,"tls":false,"network":"ws"}
-  - {"name":"🇨🇦_CA_加拿大_2","type":"vmess","server":"23.227.38.6","port":2086,"cipher":"auto","uuid":"29eebb60-b27b-4a9d-bba5-947763d9205e","alterId":0,"tls":false,"network":"ws"}
-  - {"name":"🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦","type":"trojan","server":"104.16.1.10","port":443,"udp":true,"password":"qj1Dz1CJmFQRhWr1SP80aA","sni":"cdn-21.gsmxreality.com","network":"grpc"}
-  - {"name":"🇺🇸_US_美国_4","type":"vmess","server":"104.19.51.232","port":2086,"cipher":"auto","uuid":"29eebb60-b27b-4a9d-bba5-947763d9205e","alterId":0,"tls":false,"network":"ws"}
-  - {"name":"🇺🇸_US_美国_5","type":"vmess","server":"104.19.38.62","port":2086,"cipher":"auto","uuid":"29eebb60-b27b-4a9d-bba5-947763d9205e","alterId":0,"tls":false,"network":"ws"}
-  - {"name":"🇺🇸_US_美国_6","type":"vmess","server":"fbi.gov","port":2086,"cipher":"auto","uuid":"29eebb60-b27b-4a9d-bba5-947763d9205e","alterId":0,"tls":false,"network":"ws"}
-  - {"name":"🇺🇸_US_美国->🇦🇹_AT_奥地利_1","type":"trojan","server":"172.67.131.41","port":443,"udp":true,"password":"BO7e2KO_KlAjuJY-HYoabQ","sni":"n21-at.netzrun.com","network":"ws"}
-  - {"name":"🇺🇸_US_美国->🇦🇹_AT_奥地利_2","type":"trojan","server":"104.21.3.201","port":443,"udp":true,"password":"BO7e2KO_KlAjuJY-HYoabQ","sni":"n37-at.netzrun.com","network":"ws"}
+  - {"name":"🇺🇸_US_美国->🇩🇪_DE_德国_1","type":"vless","server":"104.20.19.168","port":8880,"uuid":"f0d584bc-342f-4443-ba24-79e4d0e504b1","network":"ws"}
+  - {"name":"🇯🇵_JP_日本","type":"ss","server":"52.195.1.82","port":443,"password":"amazonskr05","cipher":"aes-256-cfb"}
+  - {"name":"🇺🇸_US_美国_1","type":"ss","server":"23.150.152.16","port":2375,"password":"faBAoD54k87UJG7","cipher":"aes-256-gcm"}
+  - {"name":"🇺🇸_US_美国_2","type":"vmess","server":"104.19.46.103","port":2086,"cipher":"auto","uuid":"e9e3cc13-db48-4cc1-8c24-7626439a5339","alterId":0,"sni":"ip1.1457230.xyz","network":"ws"}
+  - {"name":"🇺🇸_US_美国_3","type":"vmess","server":"104.19.51.232","port":2086,"cipher":"auto","uuid":"29eebb60-b27b-4a9d-bba5-947763d9205e","alterId":0,"sni":"","network":"ws"}
+  - {"name":"🇺🇸_US_美国_4","type":"vmess","server":"104.19.45.15","port":2086,"cipher":"auto","uuid":"e9e3cc13-db48-4cc1-8c24-7626439a5339","alterId":0,"sni":"","network":"ws"}
+  - {"name":"🇺🇸_US_美国_5","type":"vmess","server":"23.157.88.35","port":22324,"cipher":"auto","uuid":"04621bae-ab36-11ec-b909-0242ac120002","alterId":0,"sni":"","network":"tcp","fingerprint":""}
+  - {"name":"🇫🇷_FR_法国","type":"ss","server":"163.172.64.22","port":989,"password":"f8f7aCzcPKbsF8p3","cipher":"aes-256-cfb"}
+  - {"name":"🇺🇸_US_美国_6","type":"vmess","server":"104.19.46.233","port":2086,"cipher":"auto","uuid":"29eebb60-b27b-4a9d-bba5-947763d9205e","alterId":0,"sni":"","network":"ws"}
+  - {"name":"未知_1","type":"ss","server":"103.172.116.103","port":9093,"password":"wfLC2y7rzZyCmuyt","cipher":"aes-256-cfb"}
+  - {"name":"🇺🇸_US_美国_7","type":"vmess","server":"104.19.47.77","port":2086,"cipher":"auto","uuid":"e9e3cc13-db48-4cc1-8c24-7626439a5339","alterId":0,"sni":"ip14.freegradely.xyz","network":"ws"}
+  - {"name":"🇰🇷_KR_韩国","type":"ss","server":"13.124.244.90","port":443,"password":"amazonskr05","cipher":"aes-256-cfb"}
+  - {"name":"🇺🇸_US_美国_8","type":"ss","server":"23.150.152.16","port":8118,"password":"cdBIDV42DCwnfIN","cipher":"aes-256-gcm"}
+  - {"name":"🇺🇸_US_美国_9","type":"vless","server":"204.93.210.226","port":80,"uuid":"d342d11e-d424-4583-b36e-524ab1f0afa4","servername":"a.ssll.gay","network":"ws"}
+  - {"name":"🇺🇸_US_美国_10","type":"vmess","server":"104.19.47.79","port":2086,"cipher":"auto","uuid":"e9e3cc13-db48-4cc1-8c24-7626439a5339","alterId":0,"sni":"ip1.1457230.xyz","network":"ws"}
+  - {"name":"未知_2","type":"ss","server":"103.172.116.103","port":9042,"password":"S7KwUu7yBy58S3Ga","cipher":"aes-256-cfb"}
+  - {"name":"🇺🇸_US_美国_11","type":"vless","server":"155.46.213.100","port":80,"uuid":"d342d11e-d424-4583-b36e-524ab1f0afa4","servername":"a.ssll.gay","network":"ws"}
+  - {"name":"🇺🇸_US_美国_12","type":"vmess","server":"104.19.42.79","port":2052,"cipher":"auto","uuid":"d6b6d982-d52f-465a-b988-85670b23f64a","alterId":0,"sni":"","network":"ws"}
+  - {"name":"🇺🇸_US_美国_13","type":"vmess","server":"104.19.21.71","port":2086,"cipher":"auto","uuid":"e9e3cc13-db48-4cc1-8c24-7626439a5339","alterId":0,"sni":"","network":"ws"}
+  - {"name":"🇺🇸_US_美国_14","type":"vmess","server":"104.19.57.4","port":2086,"cipher":"auto","uuid":"e9e3cc13-db48-4cc1-8c24-7626439a5339","alterId":0,"sni":"ip11.freegradely.xyz","network":"ws"}
+  - {"name":"🇨🇳_CN_中国_1","type":"vmess","server":"183.236.51.23","port":51707,"cipher":"auto","uuid":"418048af-a293-4b99-9b0c-98ca3580dd24","alterId":64,"network":"tcp"}
+  - {"name":"🇺🇸_US_美国_15","type":"ss","server":"23.150.152.16","port":8091,"password":"PCnnH6SQSnfoS27","cipher":"aes-256-gcm"}
+  - {"name":"🇺🇸_US_美国_16","type":"vless","server":"66.81.247.161","port":80,"uuid":"d342d11e-d424-4583-b36e-524ab1f0afa4","servername":"a.ssll.gay","network":"ws"}
+  - {"name":"🇺🇸_US_美国_17","type":"vmess","server":"104.19.21.230","port":2086,"cipher":"auto","uuid":"e9e3cc13-db48-4cc1-8c24-7626439a5339","alterId":0,"sni":"ip14.freegradely.xyz","network":"ws"}
+  - {"name":"🇺🇸_US_美国_18","type":"vmess","server":"104.20.25.146","port":2086,"cipher":"auto","uuid":"e9e3cc13-db48-4cc1-8c24-7626439a5339","alterId":0,"sni":"ip14.freegradely.xyz","network":"ws"}
+  - {"name":"🇺🇸_US_美国_19","type":"vless","server":"204.93.210.208","port":80,"uuid":"d342d11e-d424-4583-b36e-524ab1f0afa4","servername":"a.ssll.gay","network":"ws"}
+  - {"name":"🇺🇸_US_美国->🇷🇺_RU_俄罗斯","type":"vless","server":"104.27.0.241","port":8880,"uuid":"51baeda8-1288-458a-b5ae-b8b080b937b6","network":"ws"}
+  - {"name":"🇺🇸_US_美国->🇩🇪_DE_德国_2","type":"vless","server":"104.21.20.68","port":80,"uuid":"7f1548ae-3c31-45a4-9150-727e5d08e068","servername":"fi3.vless.site","network":"ws"}
+  - {"name":"🇨🇳_CN_中国_2","type":"ss","server":"59.56.77.178","port":15082,"password":"hGkQ6915tD","cipher":"aes-256-cfb"}
+  - {"name":"未知_3","type":"ss","server":"103.172.116.103","port":9073,"password":"daFYagqDdBdA6VTX","cipher":"aes-256-cfb"}
+  - {"name":"🇺🇸_US_美国_20","type":"vless","server":"172.67.174.120","port":80,"uuid":"6cc5b6b6-b3d2-4c60-8197-5defdc8d6aa1","network":"ws"}
+  - {"name":"🇺🇸_US_美国_21","type":"vless","server":"172.66.44.135","port":80,"uuid":"5df7962e-f9fe-41e6-ab49-ed96ccb856a7","network":"ws"}
+  - {"name":"🇺🇦_UA_乌克兰","type":"trojan","server":"95.164.9.196","port":2053,"password":"09191dbf-e7f7-4e7d-b405-c4785ea992bf","sni":"ftp.debian.org"}
+  - {"name":"🇺🇸_US_美国->🇩🇪_DE_德国_3","type":"vless","server":"162.159.135.249","port":80,"uuid":"7a5a4624-df8d-4955-bccc-b3fa6161411f","network":"ws"}
+  - {"name":"🇺🇸_US_美国_22","type":"vless","server":"172.67.193.195","port":80,"uuid":"23082daa-5437-4e20-986b-a6e156f8f133","network":"ws"}
+  - {"name":"🇺🇸_US_美国_23","type":"trojan","server":"15.204.86.184","port":9980,"password":"4179ca8a-d210-34c2-9d17-125377a5abd2","sni":"tj-us01.yiyo2way.xyz"}
+  - {"name":"🇺🇸_US_美国_24","type":"vless","server":"104.24.197.20","port":80,"uuid":"bd2914ed-69b1-4533-a7f0-929527541c35","network":"ws"}
+  - {"name":"🇺🇸_US_美国_25","type":"trojan","server":"172.67.204.84","port":8443,"udp":true,"password":"D7eELJlFHs","sni":"J0in-Telegram-EiiiM.danesh-bonyan.Store","network":"ws"}
+  - {"name":"未知_4","type":"ss","server":"103.172.116.103","port":9045,"password":"Lp27rqyJq72bZsqX","cipher":"aes-256-cfb"}
+  - {"name":"🇺🇸_US_美国_26","type":"vmess","server":"104.19.46.17","port":2086,"cipher":"auto","uuid":"e9e3cc13-db48-4cc1-8c24-7626439a5339","alterId":0,"sni":"","network":"ws"}
+  - {"name":"🇺🇸_US_美国_27","type":"vmess","server":"104.19.45.11","port":2086,"cipher":"auto","uuid":"e9e3cc13-db48-4cc1-8c24-7626439a5339","alterId":0,"sni":"","network":"ws"}
+  - {"name":"🇺🇸_US_美国->🇫🇷_FR_法国","type":"vless","server":"104.17.147.22","port":80,"uuid":"f8eec5de-eed9-4363-a5c8-26ef7993f47b","network":"ws"}
+  - {"name":"🇺🇸_US_美国_28","type":"vmess","server":"104.19.45.42","port":2086,"cipher":"auto","uuid":"e9e3cc13-db48-4cc1-8c24-7626439a5339","alterId":0,"sni":"","network":"ws"}
+  - {"name":"未知_5","type":"ss","server":"103.172.116.103","port":9061,"password":"4R3hUfZ2FHhDmNcP","cipher":"aes-256-cfb"}
+  - {"name":"🇺🇸_US_美国_29","type":"vmess","server":"104.19.47.88","port":2086,"cipher":"auto","uuid":"e9e3cc13-db48-4cc1-8c24-7626439a5339","alterId":0,"sni":"ip1.1457230.xyz","network":"ws"}
+  - {"name":"🇺🇸_US_美国_30","type":"vless","server":"204.93.210.46","port":80,"uuid":"d342d11e-d424-4583-b36e-524ab1f0afa4","servername":"a.ssll.gay","network":"ws"}
+  - {"name":"🇺🇸_US_美国_31","type":"trojan","server":"104.17.148.22","port":8443,"udp":true,"password":"agrVcE92Pu","sni":"J0in-Telegram-EiiiM.danesh-bonyan.Store","network":"ws"}
+  - {"name":"🇨🇳_CN_中国_3","type":"vmess","server":"112.132.212.19","port":50004,"cipher":"auto","uuid":"418048af-a293-4b99-9b0c-98ca3580dd24","alterId":64,"sni":"","network":"tcp","fingerprint":""}
+  - {"name":"🇺🇸_US_美国_32","type":"ss","server":"205.134.180.139","port":443,"password":"lWaGPVFjmnag","cipher":"chacha20-ietf-poly1305"}
+  - {"name":"🇺🇸_US_美国->🇨🇦_CA_加拿大","type":"vmess","server":"172.64.99.22","port":2086,"cipher":"auto","uuid":"e9e3cc13-db48-4cc1-8c24-7626439a5339","alterId":0,"sni":"ip1.1457230.xyz","network":"ws"}
 proxy-groups:
   - name: 🚀 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - DIRECT
-      - 🇨🇦_CA_加拿大_1
+      - 🇺🇸_US_美国->🇩🇪_DE_德国_1
+      - 🇯🇵_JP_日本
       - 🇺🇸_US_美国_1
       - 🇺🇸_US_美国_2
       - 🇺🇸_US_美国_3
-      - 🇨🇦_CA_加拿大_2
-      - 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦
       - 🇺🇸_US_美国_4
       - 🇺🇸_US_美国_5
+      - 🇫🇷_FR_法国
       - 🇺🇸_US_美国_6
-      - 🇺🇸_US_美国->🇦🇹_AT_奥地利_1
-      - 🇺🇸_US_美国->🇦🇹_AT_奥地利_2
+      - 未知_1
+      - 🇺🇸_US_美国_7
+      - 🇰🇷_KR_韩国
+      - 🇺🇸_US_美国_8
+      - 🇺🇸_US_美国_9
+      - 🇺🇸_US_美国_10
+      - 未知_2
+      - 🇺🇸_US_美国_11
+      - 🇺🇸_US_美国_12
+      - 🇺🇸_US_美国_13
+      - 🇺🇸_US_美国_14
+      - 🇨🇳_CN_中国_1
+      - 🇺🇸_US_美国_15
+      - 🇺🇸_US_美国_16
+      - 🇺🇸_US_美国_17
+      - 🇺🇸_US_美国_18
+      - 🇺🇸_US_美国_19
+      - 🇺🇸_US_美国->🇷🇺_RU_俄罗斯
+      - 🇺🇸_US_美国->🇩🇪_DE_德国_2
+      - 🇨🇳_CN_中国_2
+      - 未知_3
+      - 🇺🇸_US_美国_20
+      - 🇺🇸_US_美国_21
+      - 🇺🇦_UA_乌克兰
+      - 🇺🇸_US_美国->🇩🇪_DE_德国_3
+      - 🇺🇸_US_美国_22
+      - 🇺🇸_US_美国_23
+      - 🇺🇸_US_美国_24
+      - 🇺🇸_US_美国_25
+      - 未知_4
+      - 🇺🇸_US_美国_26
+      - 🇺🇸_US_美国_27
+      - 🇺🇸_US_美国->🇫🇷_FR_法国
+      - 🇺🇸_US_美国_28
+      - 未知_5
+      - 🇺🇸_US_美国_29
+      - 🇺🇸_US_美国_30
+      - 🇺🇸_US_美国_31
+      - 🇨🇳_CN_中国_3
+      - 🇺🇸_US_美国_32
+      - 🇺🇸_US_美国->🇨🇦_CA_加拿大
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     tolerance: 50
     proxies:
-      - 🇨🇦_CA_加拿大_1
+      - 🇺🇸_US_美国->🇩🇪_DE_德国_1
+      - 🇯🇵_JP_日本
       - 🇺🇸_US_美国_1
       - 🇺🇸_US_美国_2
       - 🇺🇸_US_美国_3
-      - 🇨🇦_CA_加拿大_2
-      - 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦
       - 🇺🇸_US_美国_4
       - 🇺🇸_US_美国_5
+      - 🇫🇷_FR_法国
       - 🇺🇸_US_美国_6
-      - 🇺🇸_US_美国->🇦🇹_AT_奥地利_1
-      - 🇺🇸_US_美国->🇦🇹_AT_奥地利_2
+      - 未知_1
+      - 🇺🇸_US_美国_7
+      - 🇰🇷_KR_韩国
+      - 🇺🇸_US_美国_8
+      - 🇺🇸_US_美国_9
+      - 🇺🇸_US_美国_10
+      - 未知_2
+      - 🇺🇸_US_美国_11
+      - 🇺🇸_US_美国_12
+      - 🇺🇸_US_美国_13
+      - 🇺🇸_US_美国_14
+      - 🇨🇳_CN_中国_1
+      - 🇺🇸_US_美国_15
+      - 🇺🇸_US_美国_16
+      - 🇺🇸_US_美国_17
+      - 🇺🇸_US_美国_18
+      - 🇺🇸_US_美国_19
+      - 🇺🇸_US_美国->🇷🇺_RU_俄罗斯
+      - 🇺🇸_US_美国->🇩🇪_DE_德国_2
+      - 🇨🇳_CN_中国_2
+      - 未知_3
+      - 🇺🇸_US_美国_20
+      - 🇺🇸_US_美国_21
+      - 🇺🇦_UA_乌克兰
+      - 🇺🇸_US_美国->🇩🇪_DE_德国_3
+      - 🇺🇸_US_美国_22
+      - 🇺🇸_US_美国_23
+      - 🇺🇸_US_美国_24
+      - 🇺🇸_US_美国_25
+      - 未知_4
+      - 🇺🇸_US_美国_26
+      - 🇺🇸_US_美国_27
+      - 🇺🇸_US_美国->🇫🇷_FR_法国
+      - 🇺🇸_US_美国_28
+      - 未知_5
+      - 🇺🇸_US_美国_29
+      - 🇺🇸_US_美国_30
+      - 🇺🇸_US_美国_31
+      - 🇨🇳_CN_中国_3
+      - 🇺🇸_US_美国_32
+      - 🇺🇸_US_美国->🇨🇦_CA_加拿大
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🚀 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦_CA_加拿大_1
+      - 🇺🇸_US_美国->🇩🇪_DE_德国_1
+      - 🇯🇵_JP_日本
       - 🇺🇸_US_美国_1
       - 🇺🇸_US_美国_2
       - 🇺🇸_US_美国_3
-      - 🇨🇦_CA_加拿大_2
-      - 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦
       - 🇺🇸_US_美国_4
       - 🇺🇸_US_美国_5
+      - 🇫🇷_FR_法国
       - 🇺🇸_US_美国_6
-      - 🇺🇸_US_美国->🇦🇹_AT_奥地利_1
-      - 🇺🇸_US_美国->🇦🇹_AT_奥地利_2
+      - 未知_1
+      - 🇺🇸_US_美国_7
+      - 🇰🇷_KR_韩国
+      - 🇺🇸_US_美国_8
+      - 🇺🇸_US_美国_9
+      - 🇺🇸_US_美国_10
+      - 未知_2
+      - 🇺🇸_US_美国_11
+      - 🇺🇸_US_美国_12
+      - 🇺🇸_US_美国_13
+      - 🇺🇸_US_美国_14
+      - 🇨🇳_CN_中国_1
+      - 🇺🇸_US_美国_15
+      - 🇺🇸_US_美国_16
+      - 🇺🇸_US_美国_17
+      - 🇺🇸_US_美国_18
+      - 🇺🇸_US_美国_19
+      - 🇺🇸_US_美国->🇷🇺_RU_俄罗斯
+      - 🇺🇸_US_美国->🇩🇪_DE_德国_2
+      - 🇨🇳_CN_中国_2
+      - 未知_3
+      - 🇺🇸_US_美国_20
+      - 🇺🇸_US_美国_21
+      - 🇺🇦_UA_乌克兰
+      - 🇺🇸_US_美国->🇩🇪_DE_德国_3
+      - 🇺🇸_US_美国_22
+      - 🇺🇸_US_美国_23
+      - 🇺🇸_US_美国_24
+      - 🇺🇸_US_美国_25
+      - 未知_4
+      - 🇺🇸_US_美国_26
+      - 🇺🇸_US_美国_27
+      - 🇺🇸_US_美国->🇫🇷_FR_法国
+      - 🇺🇸_US_美国_28
+      - 未知_5
+      - 🇺🇸_US_美国_29
+      - 🇺🇸_US_美国_30
+      - 🇺🇸_US_美国_31
+      - 🇨🇳_CN_中国_3
+      - 🇺🇸_US_美国_32
+      - 🇺🇸_US_美国->🇨🇦_CA_加拿大
   - name: 📲 电报信息
     type: select
     proxies:
       - 🚀 节点选择
       - 🎯 全球直连
-      - 🇨🇦_CA_加拿大_1
+      - 🇺🇸_US_美国->🇩🇪_DE_德国_1
+      - 🇯🇵_JP_日本
       - 🇺🇸_US_美国_1
       - 🇺🇸_US_美国_2
       - 🇺🇸_US_美国_3
-      - 🇨🇦_CA_加拿大_2
-      - 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦
       - 🇺🇸_US_美国_4
       - 🇺🇸_US_美国_5
+      - 🇫🇷_FR_法国
       - 🇺🇸_US_美国_6
-      - 🇺🇸_US_美国->🇦🇹_AT_奥地利_1
-      - 🇺🇸_US_美国->🇦🇹_AT_奥地利_2
+      - 未知_1
+      - 🇺🇸_US_美国_7
+      - 🇰🇷_KR_韩国
+      - 🇺🇸_US_美国_8
+      - 🇺🇸_US_美国_9
+      - 🇺🇸_US_美国_10
+      - 未知_2
+      - 🇺🇸_US_美国_11
+      - 🇺🇸_US_美国_12
+      - 🇺🇸_US_美国_13
+      - 🇺🇸_US_美国_14
+      - 🇨🇳_CN_中国_1
+      - 🇺🇸_US_美国_15
+      - 🇺🇸_US_美国_16
+      - 🇺🇸_US_美国_17
+      - 🇺🇸_US_美国_18
+      - 🇺🇸_US_美国_19
+      - 🇺🇸_US_美国->🇷🇺_RU_俄罗斯
+      - 🇺🇸_US_美国->🇩🇪_DE_德国_2
+      - 🇨🇳_CN_中国_2
+      - 未知_3
+      - 🇺🇸_US_美国_20
+      - 🇺🇸_US_美国_21
+      - 🇺🇦_UA_乌克兰
+      - 🇺🇸_US_美国->🇩🇪_DE_德国_3
+      - 🇺🇸_US_美国_22
+      - 🇺🇸_US_美国_23
+      - 🇺🇸_US_美国_24
+      - 🇺🇸_US_美国_25
+      - 未知_4
+      - 🇺🇸_US_美国_26
+      - 🇺🇸_US_美国_27
+      - 🇺🇸_US_美国->🇫🇷_FR_法国
+      - 🇺🇸_US_美国_28
+      - 未知_5
+      - 🇺🇸_US_美国_29
+      - 🇺🇸_US_美国_30
+      - 🇺🇸_US_美国_31
+      - 🇨🇳_CN_中国_3
+      - 🇺🇸_US_美国_32
+      - 🇺🇸_US_美国->🇨🇦_CA_加拿大
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🚀 节点选择
-      - 🇨🇦_CA_加拿大_1
+      - 🇺🇸_US_美国->🇩🇪_DE_德国_1
+      - 🇯🇵_JP_日本
       - 🇺🇸_US_美国_1
       - 🇺🇸_US_美国_2
       - 🇺🇸_US_美国_3
-      - 🇨🇦_CA_加拿大_2
-      - 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦
       - 🇺🇸_US_美国_4
       - 🇺🇸_US_美国_5
+      - 🇫🇷_FR_法国
       - 🇺🇸_US_美国_6
-      - 🇺🇸_US_美国->🇦🇹_AT_奥地利_1
-      - 🇺🇸_US_美国->🇦🇹_AT_奥地利_2
+      - 未知_1
+      - 🇺🇸_US_美国_7
+      - 🇰🇷_KR_韩国
+      - 🇺🇸_US_美国_8
+      - 🇺🇸_US_美国_9
+      - 🇺🇸_US_美国_10
+      - 未知_2
+      - 🇺🇸_US_美国_11
+      - 🇺🇸_US_美国_12
+      - 🇺🇸_US_美国_13
+      - 🇺🇸_US_美国_14
+      - 🇨🇳_CN_中国_1
+      - 🇺🇸_US_美国_15
+      - 🇺🇸_US_美国_16
+      - 🇺🇸_US_美国_17
+      - 🇺🇸_US_美国_18
+      - 🇺🇸_US_美国_19
+      - 🇺🇸_US_美国->🇷🇺_RU_俄罗斯
+      - 🇺🇸_US_美国->🇩🇪_DE_德国_2
+      - 🇨🇳_CN_中国_2
+      - 未知_3
+      - 🇺🇸_US_美国_20
+      - 🇺🇸_US_美国_21
+      - 🇺🇦_UA_乌克兰
+      - 🇺🇸_US_美国->🇩🇪_DE_德国_3
+      - 🇺🇸_US_美国_22
+      - 🇺🇸_US_美国_23
+      - 🇺🇸_US_美国_24
+      - 🇺🇸_US_美国_25
+      - 未知_4
+      - 🇺🇸_US_美国_26
+      - 🇺🇸_US_美国_27
+      - 🇺🇸_US_美国->🇫🇷_FR_法国
+      - 🇺🇸_US_美国_28
+      - 未知_5
+      - 🇺🇸_US_美国_29
+      - 🇺🇸_US_美国_30
+      - 🇺🇸_US_美国_31
+      - 🇨🇳_CN_中国_3
+      - 🇺🇸_US_美国_32
+      - 🇺🇸_US_美国->🇨🇦_CA_加拿大
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🚀 节点选择
       - 🎯 全球直连
-      - 🇨🇦_CA_加拿大_1
+      - 🇺🇸_US_美国->🇩🇪_DE_德国_1
+      - 🇯🇵_JP_日本
       - 🇺🇸_US_美国_1
       - 🇺🇸_US_美国_2
       - 🇺🇸_US_美国_3
-      - 🇨🇦_CA_加拿大_2
-      - 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦
       - 🇺🇸_US_美国_4
       - 🇺🇸_US_美国_5
+      - 🇫🇷_FR_法国
       - 🇺🇸_US_美国_6
-      - 🇺🇸_US_美国->🇦🇹_AT_奥地利_1
-      - 🇺🇸_US_美国->🇦🇹_AT_奥地利_2
+      - 未知_1
+      - 🇺🇸_US_美国_7
+      - 🇰🇷_KR_韩国
+      - 🇺🇸_US_美国_8
+      - 🇺🇸_US_美国_9
+      - 🇺🇸_US_美国_10
+      - 未知_2
+      - 🇺🇸_US_美国_11
+      - 🇺🇸_US_美国_12
+      - 🇺🇸_US_美国_13
+      - 🇺🇸_US_美国_14
+      - 🇨🇳_CN_中国_1
+      - 🇺🇸_US_美国_15
+      - 🇺🇸_US_美国_16
+      - 🇺🇸_US_美国_17
+      - 🇺🇸_US_美国_18
+      - 🇺🇸_US_美国_19
+      - 🇺🇸_US_美国->🇷🇺_RU_俄罗斯
+      - 🇺🇸_US_美国->🇩🇪_DE_德国_2
+      - 🇨🇳_CN_中国_2
+      - 未知_3
+      - 🇺🇸_US_美国_20
+      - 🇺🇸_US_美国_21
+      - 🇺🇦_UA_乌克兰
+      - 🇺🇸_US_美国->🇩🇪_DE_德国_3
+      - 🇺🇸_US_美国_22
+      - 🇺🇸_US_美国_23
+      - 🇺🇸_US_美国_24
+      - 🇺🇸_US_美国_25
+      - 未知_4
+      - 🇺🇸_US_美国_26
+      - 🇺🇸_US_美国_27
+      - 🇺🇸_US_美国->🇫🇷_FR_法国
+      - 🇺🇸_US_美国_28
+      - 未知_5
+      - 🇺🇸_US_美国_29
+      - 🇺🇸_US_美国_30
+      - 🇺🇸_US_美国_31
+      - 🇨🇳_CN_中国_3
+      - 🇺🇸_US_美国_32
+      - 🇺🇸_US_美国->🇨🇦_CA_加拿大
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -217,17 +491,56 @@ proxy-groups:
       - 🚀 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦_CA_加拿大_1
+      - 🇺🇸_US_美国->🇩🇪_DE_德国_1
+      - 🇯🇵_JP_日本
       - 🇺🇸_US_美国_1
       - 🇺🇸_US_美国_2
       - 🇺🇸_US_美国_3
-      - 🇨🇦_CA_加拿大_2
-      - 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦
       - 🇺🇸_US_美国_4
       - 🇺🇸_US_美国_5
+      - 🇫🇷_FR_法国
       - 🇺🇸_US_美国_6
-      - 🇺🇸_US_美国->🇦🇹_AT_奥地利_1
-      - 🇺🇸_US_美国->🇦🇹_AT_奥地利_2
+      - 未知_1
+      - 🇺🇸_US_美国_7
+      - 🇰🇷_KR_韩国
+      - 🇺🇸_US_美国_8
+      - 🇺🇸_US_美国_9
+      - 🇺🇸_US_美国_10
+      - 未知_2
+      - 🇺🇸_US_美国_11
+      - 🇺🇸_US_美国_12
+      - 🇺🇸_US_美国_13
+      - 🇺🇸_US_美国_14
+      - 🇨🇳_CN_中国_1
+      - 🇺🇸_US_美国_15
+      - 🇺🇸_US_美国_16
+      - 🇺🇸_US_美国_17
+      - 🇺🇸_US_美国_18
+      - 🇺🇸_US_美国_19
+      - 🇺🇸_US_美国->🇷🇺_RU_俄罗斯
+      - 🇺🇸_US_美国->🇩🇪_DE_德国_2
+      - 🇨🇳_CN_中国_2
+      - 未知_3
+      - 🇺🇸_US_美国_20
+      - 🇺🇸_US_美国_21
+      - 🇺🇦_UA_乌克兰
+      - 🇺🇸_US_美国->🇩🇪_DE_德国_3
+      - 🇺🇸_US_美国_22
+      - 🇺🇸_US_美国_23
+      - 🇺🇸_US_美国_24
+      - 🇺🇸_US_美国_25
+      - 未知_4
+      - 🇺🇸_US_美国_26
+      - 🇺🇸_US_美国_27
+      - 🇺🇸_US_美国->🇫🇷_FR_法国
+      - 🇺🇸_US_美国_28
+      - 未知_5
+      - 🇺🇸_US_美国_29
+      - 🇺🇸_US_美国_30
+      - 🇺🇸_US_美国_31
+      - 🇨🇳_CN_中国_3
+      - 🇺🇸_US_美国_32
+      - 🇺🇸_US_美国->🇨🇦_CA_加拿大
 
 rules:
 # 本地/局域网地址
